--- a/public/css/master.css
+++ b/public/css/master.css
@@ -21,6 +21,17 @@ body {
     box-shadow: 0px 0px 14px -2px rgba(0, 0, 0, 0.75);
 }
 
+.item:after {
+  content:"";
+  display:block;
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  background:rgba(0,0,0,0.6);
+}
+
 /* Small devices (tablets, 768px and up) */
 @media (max-width: 768px) {
     .body {
